tests/fail/smart_ptr_from_stack.stderr
error[E0459]: Implicit heap-boxing via pointer initialization is prohibited. Use explicit allocation like 'new i32(...)' stringently
 --> tests/fail/smart_ptr_from_stack.tk:12:11
   |
 12 |     auto ~p2 = ~a
   |           ^
error[E0449]: Smart pointer sigil '94' cannot be applied to stack variable; use 'new' or assign from existing smart pointer
 --> tests/fail/smart_ptr_from_stack.tk:19:32
   |
 19 |     auto ^p4 = (a as Addr) as ^i32
   |                                ^
